tests/error/comptime/invalid_result_value3.bz
// error: invalid value of type '[5: str]' returned from compile time execution
// note: invalid value of type 'str' for element 3 in array of type '[5: str]'
// note: memory range contains objects outside their lifetime in this stack object
// error: expression must be a constant expression
consteval s = {
	let buffer = [10: u8]();
	mut result = [5: str]();
	result[3] = __builtin_str_from_ptrs(buffer.begin(), buffer.end());
	result
};
